2007-08-20  Andrew John Hughes  <andrew@dcs.shef.ac.uk>

	* configure.ac, autogen.sh:
	Fix path to Process.java
	
2007-08-20  Andrew John Hughes  <andrew@dcs.shef.ac.uk>

	* src/uk/ac/shef/dcs/dynamite/Process.java:
	Renamed from tnt-dynamite subdirectory.
	
2007-08-20  Andrew John Hughes  <andrew@dcs.shef.ac.uk>

	* src/uk/ac/shef/dcs/tnt-dynamite/Process.java:
	Add package name.
	* configure.ac,
	* lib/gen-classlist.sh.in,
	* lib/Makefile.am,
	* acinclude.m4,
	* Makefile.am:
	Support javac and build DynamiTE.
	
2007-08-17  Andrew John Hughes  <andrew@dcs.shef.ac.uk>

	* LICENSE,
	* AUTHORS,
	* README,
	* BUGS,
	* THANKYOU,
	* configure.ac,
	* HACKING,
	* lib/gen-classlist.sh.in,
	* lib/Makefile.am,
	* lib/.cvsignore,
	* acinclude.m4,
	* COPYING,
	* autogen.sh,
	* NEWS:
	Initial build infrastructure.
	* docs/papers/ja4mo07/paper.tex:
	Added copyright data.
	
2007-06-18  Andrew John Hughes  <andrew@dcs.shef.ac.uk>

	* docs/papers/ja4mo07/paper.tex,
	* docs/papers/ja4mo07/literature.bib:
	First revision.

2007-06-18  Andrew John Hughes  <andrew@dcs.shef.ac.uk>

	* docs/papers/ja4mo07/paper.tex:
	Final version.

2007-06-18  Andrew John Hughes  <andrew@dcs.shef.ac.uk>

	* docs/papers/ja4mo07/paper.tex:
	First draft completed.

2007-06-17  Andrew John Hughes  <andrew@dcs.shef.ac.uk>

	* docs/papers/ja4mo07/literature.bib,
	* docs/papers/ja4mo07/Makefile,
	* docs/papers/ja4mo07/macros.tex,
	* docs/papers/ja4mo07/acm_proc_article-sp.cls:
	Added.
	* docs/papers/ja4mo07/paper.tex:
	New paper for Java workshop.
	
2007-04-11  Andrew John Hughes  <andrew@dcs.shef.ac.uk>

	* docs/papers/concur07/concur.tex:
	Final version.
	
2007-04-11  Andrew John Hughes  <andrew@dcs.shef.ac.uk>

	* docs/papers/concur07/concur.tex:
	Table merging fun.

2007-04-11  Andrew John Hughes  <andrew@dcs.shef.ac.uk>

	* docs/papers/concur07/concur.tex,
	* docs/papers/concur07/proofmacros.tex:
	The big proof merge.

2007-04-10  Andrew John Hughes  <andrew@dcs.shef.ac.uk>
